# practicum_7sem

./: .gitignore  Readme.md
task-0/: CMakeLists.txt  ClassComplex.h  ClassMatrix.h  ClassRationalNumber.cpp  ClassRationalNumber.h  Doxyfile  Readme.md  Task0.h  conf.org
task-0/complex/: ClassComplex.h
task-0/exceptions/: CommonExceptions.hpp  ComplNumbersExceptions.hpp  MatrixExceptions.hpp  ParserExceptions.hpp  RatNumbersExceptions.hpp  VectorExceptions.hpp
task-0/matrix/: ClassMatrix.h  Matrix_coords.cpp  Matrix_coords.h  Matrix_proxy.hpp
task-0/parsers/: Parser.cpp  Parser.h
task-0/rational/: ClassRationalNumber.cpp  ClassRationalNumber.h
task-0/tests/complex/: ComplNumbersConstrTests.cpp  ComplNumbersOperatorsTest.cpp
task-0/tests/matrix/: MatrixTest.cpp
task-0/tests/matrix/matrix_input_files/: matrix_bad.txt  matrix_complex.txt  matrix_rational.txt
task-0/tests/rational/: RatNumbersConstrTests.cpp  RatNumbersOperatorsTest.cpp
task-0/tests/vector/: VectorTest.cpp
task-0/tests/vector/vector_input_files/: vector_bad.txt  vector_complex.txt  vector_rational.txt
task-0/vector/: ClassVector.hpp
task-1/: Computer_configuration.txt  README.md  Task1.h  test_annealing.cpp
task-1/research/: Short_analysis.txt  law_research_res.csv  research_cycle.cpp  result_analysis.py  time_research_res.csv
task-1/src/: Annealing.cpp  Generator.cpp  Mutation.cpp  Schedule.cpp  Temperature.cpp
task-2/: CMakeLists.txt  README.md  Task2.h
task-2/src/: FuncFabric.cpp  FuncFabric.h  Functions.cpp  Functions.h
task-2/tests/: FuncTests.cpp
task-3/: CMakeLists.txt  README.md  Task3.h  test_task3.cpp
task-3/research/: genetic_algo_research.csv  research_cycle.cpp  series_0_run_0_sol.txt  series_0_run_0_sol_after100.txt  series_0_run_1_sol.txt  series_0_run_1_sol_after100.txt  series_0_run_2_sol.txt  series_0_run_2_sol_after100.txt  series_0_run_3_sol.txt  series_0_run_3_sol_after100.txt  series_0_run_4_sol.txt  series_0_run_4_sol_after100.txt  series_0_run_5_sol.txt  series_0_run_5_sol_after100.txt  series_0_run_6_sol.txt  series_0_run_6_sol_after100.txt  series_0_run_7_sol.txt  series_0_run_7_sol_after100.txt  series_0_run_8_sol.txt  series_0_run_8_sol_after100.txt  series_0_run_9_sol.txt  series_0_run_9_sol_after100.txt  series_1_run_0_sol.txt  series_1_run_0_sol_after100.txt  series_1_run_1_sol.txt  series_1_run_1_sol_after100.txt  series_1_run_2_sol.txt  series_1_run_2_sol_after100.txt  series_1_run_3_sol.txt  series_1_run_3_sol_after100.txt  series_1_run_4_sol.txt  series_1_run_4_sol_after100.txt  series_1_run_5_sol.txt  series_1_run_5_sol_after100.txt  series_1_run_6_sol.txt  series_1_run_6_sol_after100.txt  series_1_run_7_sol.txt  series_1_run_7_sol_after100.txt  series_1_run_8_sol.txt  series_1_run_8_sol_after100.txt  (+162 more)
task-3/src/: Crossing.cpp  GenerationAlgo.cpp  GeneticAlgo.cpp  GoLEngine.hpp  Mutation.cpp  Selection.cpp  Sizes.h  SurvaivalFunc.cpp
